--- a/PassManager/App.xaml
+++ b/PassManager/App.xaml
@@ -43,9 +43,10 @@
                 Data="M10 14.0505C9.36474 13.4022 8.47934 13 7.5 13C5.567 13 4 14.567 4 16.5C4 18.433 5.567 20 7.5 20C9.433 20 11 18.433 11 16.5C11 15.5463 10.6186 14.6817 10 14.0505ZM10 14.0505L15.0316 9.01891M20.0505 7.99997L18.7576 6.70708C18.3671 6.31655 17.7339 6.31655 17.3434 6.70708L15.0316 9.01891M15.0316 9.01891L17 10.9873"
                 Style="{StaticResource Icon}" />
 
+            <!--  Шаблон  -->
             <!--<Path
                 x:Key="Plus"
-                Data="M 0 0 L 0 14 M -7 7 L 7 7"
+                Data=""
                 Style="{StaticResource Icon}" />-->
 
         </ResourceDictionary>
