--- a/PassManager/Pages/StoragePage.xaml
+++ b/PassManager/Pages/StoragePage.xaml
@@ -199,8 +199,7 @@
                         <Border
                             Margin="5"
                             Padding="5"
-                            Background="#eeeeee"
-                            MouseLeftButtonDown="ItemClick">
+                            Background="#eeeeee">
                             <Border.ContextMenu>
                                 <ContextMenu>
                                     <MenuItem
@@ -213,8 +212,12 @@
                                         Tag="Remove" />
                                     <MenuItem
                                         Click="MenuItemClick"
-                                        Header="Скопировать"
-                                        Tag="Copy" />
+                                        Header="Скопировать логин"
+                                        Tag="CopyL" />
+                                    <MenuItem
+                                        Click="MenuItemClick"
+                                        Header="Скопировать пароль"
+                                        Tag="CopyP" />
                                 </ContextMenu>
                             </Border.ContextMenu>
                             <Grid>
