--- a/PassManager/Pages/LoginPage.xaml
+++ b/PassManager/Pages/LoginPage.xaml
@@ -6,8 +6,8 @@
     xmlns:local="clr-namespace:PassManager.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="LoginPage"
-    d:DesignHeight="200"
-    d:DesignWidth="400"
+    d:DesignHeight="100"
+    d:DesignWidth="300"
     mc:Ignorable="d">
     <Grid>
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -16,7 +16,7 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
@@ -24,24 +24,27 @@
                 x:Name="PassBox"
                 Width="200"
                 Height="30"
-                Margin="5"
+                Margin="5,0,0,0"
                 VerticalContentAlignment="Center"
-                MaxLength="4" />
+                FontWeight="Bold"
+                Style="{DynamicResource Password}" />
             <Button
                 Grid.Column="1"
-                Margin="5"
-                Padding="5,0"
+                Height="30"
                 Click="ButtonClick"
-                Content="Войти"
-                IsDefault="True" />
+                Content="{DynamicResource ArrowRight}"
+                IsDefault="True"
+                Style="{DynamicResource IconButtons}"
+                ToolTip="Войти" />
 
             <Border
                 Grid.Row="1"
                 Grid.ColumnSpan="2"
-                Margin="5,0"
+                Margin="5"
                 Background="#64FF0000"
                 BorderBrush="Red"
                 BorderThickness="2"
+                CornerRadius="5"
                 Visibility="{Binding ErrorBlock.Value}">
                 <Label
                     HorizontalAlignment="Center"
