--- a/PassManager/Pages/StoragePage.xaml
+++ b/PassManager/Pages/StoragePage.xaml
@@ -152,7 +152,7 @@
                     Margin="2"
                     Padding="2"
                     Style="{DynamicResource TextBoxStyle}"
-                    Text="{Binding NewItem.Value.Link, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding Link.Value, UpdateSourceTrigger=PropertyChanged}"
                     TextChanged="ValidateInput" />
                 <TextBlock
                     Grid.Row="1"
@@ -165,7 +165,7 @@
                     Margin="2"
                     Padding="2"
                     Style="{DynamicResource TextBoxStyle}"
-                    Text="{Binding NewItem.Value.Login, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding Login.Value, UpdateSourceTrigger=PropertyChanged}"
                     TextChanged="ValidateInput" />
                 <TextBlock
                     Grid.Row="2"
@@ -178,7 +178,7 @@
                     Margin="2"
                     Padding="2"
                     Style="{DynamicResource TextBoxStyle}"
-                    Text="{Binding NewItem.Value.Password, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding Password.Value, UpdateSourceTrigger=PropertyChanged}"
                     TextChanged="ValidateInput" />
                 <StackPanel
                     Grid.Row="3"
