--- a/PassManager/Pages/StoragePage.xaml
+++ b/PassManager/Pages/StoragePage.xaml
@@ -24,6 +24,7 @@
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition />
                 <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <Button
                 Click="AddClick"
@@ -48,6 +49,14 @@
                 Click="SearchClick"
                 Content="{DynamicResource Search}"
                 Style="{DynamicResource IconButtons}" />
+            <Button
+                Grid.Column="4"
+                Margin="0,0,5,0"
+                Padding="12"
+                Click="LogoutClick"
+                Content="{DynamicResource ArrowLeft}"
+                Style="{DynamicResource IconButtons}"
+                ToolTip="Выход" />
         </Grid>
         <Border
             x:Name="MasterEditor"
@@ -87,6 +96,7 @@
                     Grid.Column="1"
                     Margin="2"
                     Padding="2"
+                    MaxLength="4"
                     PasswordChanged="InputPasswordChanged"
                     Style="{DynamicResource Password}" />
                 <TextBlock
@@ -100,6 +110,7 @@
                     Grid.Column="1"
                     Margin="2"
                     Padding="2"
+                    MaxLength="4"
                     PasswordChanged="InputPasswordChanged"
                     Style="{DynamicResource Password}" />
                 <StackPanel
@@ -172,14 +183,23 @@
                     Grid.Column="0"
                     VerticalAlignment="Center"
                     Text="Пароль:" />
-                <TextBox
+                <PasswordBox
+                    x:Name="ItemPass"
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Margin="2"
+                    Padding="2"
+                    PasswordChanged="InputPasswordChanged"
+                    Style="{DynamicResource Password}"
+                    Tag="item" />
+                <!--<TextBox
                     Grid.Row="2"
                     Grid.Column="1"
                     Margin="2"
                     Padding="2"
                     Style="{DynamicResource TextBoxStyle}"
                     Text="{Binding Password.Value, UpdateSourceTrigger=PropertyChanged}"
-                    TextChanged="ValidateInput" />
+                    TextChanged="ValidateInput" />-->
                 <StackPanel
                     Grid.Row="3"
                     Grid.Column="1"
