--- a/PassManager/Pages/LoginPage.xaml
+++ b/PassManager/Pages/LoginPage.xaml
@@ -6,12 +6,14 @@
     xmlns:local="clr-namespace:PassManager.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="LoginPage"
-    d:DesignHeight="100"
+    d:DesignHeight="400"
     d:DesignWidth="300"
     mc:Ignorable="d">
     <Grid>
+
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
                 <RowDefinition />
             </Grid.RowDefinitions>
@@ -20,8 +22,25 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
+            <Grid Width="150" Height="60">
+                <TextBlock
+                    Margin="0,0,0,10"
+                    HorizontalAlignment="Center"
+                    FontFamily="MV Boli"
+                    FontSize="36"
+                    Text="My Pass" />
+                <TextBlock
+                    Margin="10,5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    FontFamily="Arial Black"
+                    FontSize="12"
+                    Text="manager" />
+            </Grid>
+
             <PasswordBox
                 x:Name="PassBox"
+                Grid.Row="1"
                 Width="200"
                 Height="30"
                 VerticalContentAlignment="Center"
@@ -31,7 +50,7 @@
                 Style="{DynamicResource Password}" />
 
             <Border
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.ColumnSpan="2"
                 Margin="0,5"
                 Background="#64FF0000"
